--- a/aboutus.html
+++ b/aboutus.html
@@ -31,6 +31,7 @@
     <div class="drawer-close">
       <span onclick="closeNav()">X</span>
     </div>
+
     <ul>
       <a href="">Qui sommes-nous</a>
       <a href="">Actualités</a>
@@ -41,14 +42,14 @@
     </ul>
     </div>
 
-    <section class="hero-area">
+    <div class="hero-area">
       <div class="hero-text">
-        <h2> QUI SOMMES-NOUS?</h2>
-        <img src="assests/img/undraw_playing_cards_cywn 1.svg"  alt="">
-      </div>
-      </section>
-      
-      <section class="body">
+        <h2>WOMEN IN ANALYTICS</h2>
+        <img src="assests/img/undraw_playing_cards_cywn 1.svg" alt="">
+      </div>  
+    </div>
+    
+    <section class="body">
         <div class="body-title">
           <h3 class="underlined-text">Objectif de l'association</h3>
           <p>Créée en février 2015, l’Association des Analytics Digitaux Francophones (AADF) a pour objet :
@@ -106,7 +107,28 @@
         </div>
 
         <div class="footer-contact">
-          <img src="assests/img/contact.png" alt="">
+          <div class="contact-title">Nous contacter</div>
+          <div class="contact-row">
+            <img src="/assests/img/ant-design_mail-filled.svg" alt="" /><span
+              >AADF 7, rue de Castellane, 75008 Paris</span
+            >
+          </div>
+          <div class="contact-row">
+            <img
+              src="/assests/img/ant-design_twitter-circle-filled.svg"
+              alt=""
+            /><span>Twitter @assoAADF</span>
+          </div>
+          <div class="contact-row">
+            <img src="assests/img/ion_at-circle.svg" alt="" /><span
+              >assoAADF@gmail.com</span
+            >
+          </div>
+          <div class="contact-row">
+            <img src="/assests/img/carbon_phone-filled.svg" alt="" /><span
+              >+33 1 xx xx xx xx</span
+            >
+          </div>
         </div>
       </footer>
       <script src="index.js"></script>
