--- a/womeninanalytics.html
+++ b/womeninanalytics.html
@@ -103,7 +103,28 @@
       </div>
 
       <div class="footer-contact">
-        <img src="assests/img/contact.png" alt="">
+        <div class="contact-title">Nous contacter</div>
+        <div class="contact-row">
+          <img src="/assests/img/ant-design_mail-filled.svg" alt="" /><span
+            >AADF 7, rue de Castellane, 75008 Paris</span
+          >
+        </div>
+        <div class="contact-row">
+          <img
+            src="/assests/img/ant-design_twitter-circle-filled.svg"
+            alt=""
+          /><span>Twitter @assoAADF</span>
+        </div>
+        <div class="contact-row">
+          <img src="assests/img/ion_at-circle.svg" alt="" /><span
+            >assoAADF@gmail.com</span
+          >
+        </div>
+        <div class="contact-row">
+          <img src="/assests/img/carbon_phone-filled.svg" alt="" /><span
+            >+33 1 xx xx xx xx</span
+          >
+        </div>
       </div>
     </footer>
     <script src="/index.js"></script>
